--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>The Bet</title>
-    <link rel="stylesheet" type="text/css" href="/resources/public/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/the_bet/resources/public/css/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/resources/public/js/main.js"></script>
+    <div id="app" />
+    <script src="/the_bet/resources/public/js/main.js" />
   </body>
 </html>
