--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The Bet</title>
-    <link rel="stylesheet" type="text/css" href="/the_bet/resources/public/css/style.css" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
   </head>
   <body>
     <div id="app" />
