--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
   </head>
   <body>
-    <div id="app" />
-    <script src="/the_bet/resources/public/js/main.js" />
+    <div id="app"></div>
+    <script src="/the_bet/resources/public/js/main.js"></script>
   </body>
 </html>
