--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <div id="app"></div>
     <script src="/the_bet/resources/public/js/main.js"></script>
+    <script>the_bet.core.main();</script>
   </body>
 </html>
