--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>The Bet</title>
+    <link href="/the_bet/resources/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
   </head>
   <body>
     <div id="app"></div>
     <script src="/the_bet/resources/public/js/main.js"></script>
-    <script>the_bet.core.main();</script>
   </body>
 </html>
