Create minimal build for testing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>The Bet</title>
     <link href="/the_bet/resources/public/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+    <!-- Production Build -->
+    <!-- ab2f49f4-5993-4943-bcc2-b186d77ad327 -->
   </head>
   <body>
     <div id="app"></div>
